[package]
name = "recibo"
version = "0.2.0"
edition = "2021"
rust-version = "1.56"
description = "ESC/POS printer driver for Rust"
homepage = "https://github.com/jamhall/recibo"
repository = "https://github.com/jamhall/recibo"
license = "MIT"
authors = ["Jamie Hall <hello@jamiehall.eu>"]
readme = "README.md"
keywords = ["escpos", "printer", "driver", "thermal", "receipt"]

[features]
graphics = ["dep:image"]
serde = ["dep:serde"]

[dependencies]
barcoders = "1.0.2"
byteorder = "1.4.3"
encoding = "0.2.33"
log = "0.4.18"
image = { version = "0.24.6", optional = true }
serde = { version = "1.0.163", features = ["derive"], optional = true }

[dev-dependencies]
image = { version = "0.24.6", optional = false }
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"], optional = false }
